--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="main-header container">
-      <div class="main-header-wrapper container">
+      <div class="wrapper container">
         <a class="logo">
           <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
         </a>
@@ -31,43 +31,42 @@
             </li>
           </ul> 
         </div>
-          <nav class="main-nav">
-            <ul class="main-nav-list m-p-reset list-reset flex-row">
-              <li class="nav-item-catalog" aria-haspopup=" true">
-                <a href="catalog.html">Каталог товаров</a>
-                <ul class="main-nav-sublist">
-                  <li>
-                    <a href="">Виртуальная реальность</a>
-                  </li>
-                  <li>
-                    <a href="">Фитнес-браслеты</a>
-                  </li>
-                  <li>
-                    <a href="">Квадрокоптеры</a>
-                  </li>
-                  <li>
-                    <a href="">Моноподы для селфи</a>
-                  </li>
-                  <li>
-                    <a href="">Умные часы</a>
-                  </li>
-                  <li>
-                    <a href="">Экшн-камеры</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item-delivery">
-                <a href="">Доставка</a>
-              </li>
-              <li class="nav-item-warranty">
-                <a href="">Гарантия</a>
-              </li>
-              <li class="nav-item-contacts">
-                <a href="">Контакты</a>
-              </li>
-            </ul>
-          </nav>
-
+        <nav class="main-nav">
+          <ul class="main-nav-list m-p-reset list-reset flex-row">
+            <li class="nav-item-catalog" aria-haspopup=" true">
+              <a href="catalog.html">Каталог товаров</a>
+              <ul class="main-nav-sublist">
+                <li>
+                  <a href="">Виртуальная реальность</a>
+                </li>
+                <li>
+                  <a href="">Фитнес-браслеты</a>
+                </li>
+                <li>
+                  <a href="">Квадрокоптеры</a>
+                </li>
+                <li>
+                  <a href="">Моноподы для селфи</a>
+                </li>
+                <li>
+                  <a href="">Умные часы</a>
+                </li>
+                <li>
+                  <a href="">Экшн-камеры</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item-delivery">
+              <a href="">Доставка</a>
+            </li>
+            <li class="nav-item-warranty">
+              <a href="">Гарантия</a>
+            </li>
+            <li class="nav-item-contacts">
+              <a href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="main container">
