Исправил замечания. Стилизовал выпадающее меню в хедере

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <header class="main-header container">
-      <div class="wrapper container">
+      <div class="header-wrapper">
         <a class="logo">
           <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
         </a>
-        <div class="nav-wrapper flex-row">
+        <div class="nav-wrapper">
           <div class="search">
             <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
               <input type="search" name="search" placeholder="Поиск по сайту">
               <button type="submit">Найти</button>
             </form>
           </div>
-          <ul class="user-nav-header m-p-reset list-reset flex-row">
+          <ul class="user-nav-header list-reset">
             <li class="user-nav-login">
               <a href="">Войти</a>
             </li>
@@ -32,10 +32,10 @@
           </ul> 
         </div>
         <nav class="main-nav">
-          <ul class="main-nav-list m-p-reset list-reset flex-row">
-            <li class="nav-item-catalog" aria-haspopup=" true">
+          <ul class="main-nav-list list-reset">
+            <li class="nav-item-catalog" aria-haspopup="true">
               <a href="catalog.html">Каталог товаров</a>
-              <ul class="main-nav-sublist">
+              <ul class="main-nav-sublist list-reset">
                 <li>
                   <a href="">Виртуальная реальность</a>
                 </li>
@@ -54,15 +54,16 @@
                 <li>
                   <a href="">Экшн-камеры</a>
                 </li>
+
               </ul>
             </li>
-            <li class="nav-item-delivery">
+            <li class="nav-item nav-item-delivery">
               <a href="">Доставка</a>
             </li>
-            <li class="nav-item-warranty">
+            <li class="nav-item nav-item-warranty">
               <a href="">Гарантия</a>
             </li>
-            <li class="nav-item-contacts">
+            <li class="nav-item nav-item-contacts">
               <a href="">Контакты</a>
             </li>
           </ul>
@@ -236,8 +237,8 @@
         </ul>
       </section>
       <section class="about">
-        <div class="about-col about-info m-p-reset">
-          <h2 class="about-title m-p-reset">О нас</h2>
+        <div class="about-wrapper about-info">
+          <h2 class="about-title">О нас</h2>
           <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
             компаниями:</p>
@@ -248,8 +249,8 @@
           </ul>
           <a class="button" href="">Подробнее о нас</a>
         </div>
-        <div class="about-col about-contacts m-p-reset">
-          <h2 class="about-title m-p-reset">Контакты</h2>
+        <div class="about-wrapper about-contacts">
+          <h2 class="about-title">Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.
             Всякое бывает.</p>
           <a class="about-map-min" href="https://goo.gl/maps/t1BHJGnUhaJkedXv9">
@@ -267,7 +268,7 @@
               <path d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z" />
             </svg>
           </a>
-          <ul class="user-nav-footer list-reset m-p-reset">
+          <ul class="user-nav-footer list-reset">
             <li class="login-footer">
               <a href="">
                 <svg class="user-icon" xmlns="http://www.w3.org/2000/svg" width="13" height="12" viewBox="0 0 13 12">
@@ -294,7 +295,7 @@
         </div>
         <div class="footer-wrapper">
           <p class="address">г. Москва, ул. Строителей, 15</p>
-          <ul class="main-nav-list main-nav-footer m-p-reset list-reset">
+          <ul class="main-nav-list main-nav-footer list-reset">
             <li>
               <a href="">Доставка</a>
             </li>
@@ -308,7 +309,7 @@
           <a class="phone" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
         </div>
         <div class="footer-wrapper ribbon">
-          <ul class="social-list list-reset m-p-reset">
+          <ul class="social-list list-reset">
             <li>
               <a class="facebook" href="">Facebook</a>
             </li>
