--- a/catalog.html
+++ b/catalog.html
@@ -8,20 +8,23 @@
   </head>
   <body>
     <header class="main-header container">
-      <div class="wrapper container">
-        <a class="logo" href="index.html" aria-label="Переход на главную">
+      <div class="header-wrapper">
+        <a href="index.html" class="logo">
           <img src="img/logo-device.svg" width="163" height="35" alt="Интернет-магазин 'Device'">
         </a>
-        <div class="nav-wrapper flex-row">
+        <div class="nav-wrapper">
           <div class="search">
             <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
               <input type="search" name="search" placeholder="Поиск по сайту">
               <button type="submit">Найти</button>
             </form>
           </div>
-          <ul class="user-nav-header m-p-reset list-reset flex-row">
+          <ul class="user-nav-header list-reset">
             <li class="user-nav-login">
-              <a href="profile.html">Валентин Петухов</a>
+              <a href="">Валентин Петухов</a>
+            </li>
+            <li class="user-nav-logout">
+              <a href="">Выйти</a>
             </li>
             <li class="user-nav-compare">
               <a href="">Сравнить</a>
@@ -32,10 +35,10 @@
           </ul>
         </div>
         <nav class="main-nav">
-          <ul class="main-nav-list m-p-reset list-reset flex-row">
+          <ul class="main-nav-list list-reset">
             <li class="nav-item-catalog" aria-haspopup="true">
-              <a class="catalog-link">Каталог товаров</a>
-              <ul class="main-nav-sublist">
+              <a href="catalog.html">Каталог товаров</a>
+              <ul class="main-nav-sublist list-reset">
                 <li>
                   <a href="">Виртуальная реальность</a>
                 </li>
@@ -56,13 +59,13 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item-delivery">
+            <li class="nav-item nav-item-delivery">
               <a href="">Доставка</a>
             </li>
-            <li class="nav-item-warranty">
+            <li class="nav-item nav-item-warranty">
               <a href="">Гарантия</a>
             </li>
-            <li class="nav-item-contacts">
+            <li class="nav-item nav-item-contacts">
               <a href="">Контакты</a>
             </li>
           </ul>
@@ -70,9 +73,9 @@
       </div>
     </header>
     <main> 
-      <section class="page-header container wrapper">
+      <section class="page-intro container">
         <h1 class="page-title">Моноподы для селфи</h1>
-        <ul class="breadcrumbs list-reset m-p-reset flex-row">
+        <ul class="breadcrumbs list-reset">
           <li>
             <a href="index.html">Главная</a>
           </li>
@@ -84,14 +87,14 @@
           </li>
         </ul>
       </section>
-      <div class="catalog-header container">
-        <div class="container flex-row">
+      <div class="catalog-header wrapper">
+        <div class="container">
           <div class="sidebar-header">
             <p class="filter-title">Фильтр:</p>
           </div>
-          <div class="content-header flex-row">
+          <div class="content-header wrapper">
             <p class="sort-title">Сортировка:</p>
-            <ul class="sort-list flex-row">
+            <ul class="sort-list list-reset">
               <li class="sort-item">
                 <a class="sort-action" href="">По цене</a>
               </li>
@@ -111,16 +114,15 @@
           </div>
         </div>
       </div>
+      <section class="catalog-page-content wrapper">
+        <div class="container">
 
-      <section class="catalog-page-content container">
-        <div class="catalog-page-sidebar">
-          <div>
+          <div class="catalog-page-sidebar">
             <form class="filter-settings" action="https://echo.htmlacademy.ru" method="GET">
               <fieldset class="filter-item">
                 <legend class="filter-legend">
                   Стоимость
                 </legend>
-                <div></div>
               </fieldset>
               <fieldset class="filter-item">
                 <legend class="filter-legend">Цвет</legend>
@@ -163,14 +165,13 @@
               <button class="button" type="submit">Показать</button>
             </form>
           </div>
-        </div>
 
         <div class="catalog-main-content">
-          <ul class="catalog-list m-p-reset">
+          <ul class="catalog-list list-reset">
             <li class="catalog-list-item">
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <div class="catalog-item-wrapper">
-                <h3 class="catalog-item-title  m-p-reset">
+                <h3 class="catalog-item-title">
                   <a href="">Любительская селфи-палка</a>
                 </h3>
                 <span class="catalog-item-price">500 руб.</span>
@@ -184,7 +185,7 @@
             <li class="catalog-list-item">
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               <div class="catalog-item-wrapper">
-                <h3 class="catalog-item-title m-p-reset">
+                <h3 class="catalog-item-title">
                   <a href="">Профессиональная селфи-палка</a>
                 </h3>
                 <span class="catalog-item-price">1 500 руб.</span>
@@ -198,7 +199,7 @@
             <li class="catalog-list-item">
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               <div class="catalog-item-wrapper">
-                <h3 class="catalog-item-title  m-p-reset">
+                <h3 class="catalog-item-title">
                   <a href="">Непотопляемая селфи-палка</a>
                 </h3>
                 <span class="catalog-item-price">2 500 руб.</span>
@@ -212,7 +213,7 @@
             <li class="catalog-list-item">
               <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               <div class="catalog-item-wrapper">
-                <h3 class="catalog-item-title  m-p-reset">
+                <h3 class="catalog-item-title">
                   <a href="">Селфи-палка «Следуй за мной»</a>
                 </h3>
                 <span class="catalog-item-price">4 900 руб.</span>
@@ -223,7 +224,7 @@
               </div>
             </li>
           </ul>
-          <ul class="pagination-list m-p-reset list-reset">
+          <ul class="pagination-list list-reset">
             <li class="pagination-item pagination-button">
               <a href="">Назад</a>
             </li>
@@ -240,6 +241,8 @@
               <a href="">Вперед</a>
             </li>
           </ul>
+        </div> 
+
         </div>
 
       </section>
@@ -254,7 +257,7 @@
                 d="m0.35 0.7v33.6h13.532a15.723 15.723 0 0 0 11.72-4.824 16.464 16.464 0 0 0 4.712-11.976 16.465 16.465 0 0 0-4.712-11.976 15.723 15.723 0 0 0-11.72-4.824zm7.733 26.208v-18.819h5.8a8.648 8.648 0 0 1 6.5 2.568 9.412 9.412 0 0 1 2.489 6.84 9.41 9.41 0 0 1-2.489 6.84 8.646 8.646 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3h-12.086v-5.567h13.291v-7.389h-21.024v33.6h21.265v-7.392h-13.532v-5.952zm36.343 13.344 11.019-33.6h-8.458l-7.491 24.72-7.491-24.72h-8.457l11.019 33.6zm14.4 0h7.733v-33.6h-7.733zm38.615-1.416a15.514 15.514 0 0 0 6.041-5.688l-6.67-3.84a7.488 7.488 0 0 1-3.165 3.024 9.874 9.874 0 0 1-4.664 1.1 9.594 9.594 0 0 1-7.177-2.736 9.907 9.907 0 0 1-2.682-7.248 9.908 9.908 0 0 1 2.682-7.248 9.594 9.594 0 0 1 7.177-2.736 9.914 9.914 0 0 1 4.64 1.08 7.6 7.6 0 0 1 3.189 3.048l6.67-3.84a15.881 15.881 0 0 0-6.09-5.688 17.419 17.419 0 0 0-8.409-2.088 17.12 17.12 0 0 0-17.592 17.472 17.12 17.12 0 0 0 17.589 17.476 17.519 17.519 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085v-5.567h13.29v-7.389h-21.022v33.6h21.264v-7.392h-13.532v-5.952z" />
             </svg>
           </a>
-          <ul class="user-nav-footer list-reset m-p-reset">
+          <ul class="user-nav-footer list-reset">
             <li class="login-footer">
               <a href="profile.html">
                 <svg class="user-icon" xmlns="http://www.w3.org/2000/svg" width="13" height="12" viewBox="0 0 13 12">
@@ -284,7 +287,7 @@
         </div>
         <div class="footer-wrapper">
           <p class="address">г. Москва, ул. Строителей, 15</p>
-          <ul class="main-nav-list main-nav-footer m-p-reset list-reset">
+          <ul class="main-nav-list main-nav-footer list-reset">
             <li>
               <a href="">Доставка</a>
             </li>
@@ -298,7 +301,7 @@
           <a class="phone" href="tel:+74954959595">Тел.:+7 (495) 495-95-95</a>
         </div>
         <div class="footer-wrapper ribbon">
-          <ul class="social-list list-reset m-p-reset">
+          <ul class="social-list list-reset">
             <li>
               <a class="facebook" href="">Facebook</a>
             </li>
